# barq

./: .gitignore  Cargo.toml  README.md
boot/: Cargo.toml  README.md  rustfmt.toml
boot/src/: analyzer.rs  ast.rs  bair.rs  bcu.rs  bir.rs  lexer.rs  lowerer.rs  macros.rs  main.rs  parser.rs  scope.rs  token.rs
bootstrap/: build.zig  main.zig
bootstrap/compiler/: Air.zig  Compilation.zig  Lexer.zig  Range.zig  Sema.zig  Sir.zig  Symbol.zig  Token.zig
bootstrap/compiler/backend/: LlvmBackend.zig
bootstrap/src/: Air.zig  Compilation.zig  Lexer.zig  Sema.zig  Sir.zig  Symbol.zig  Token.zig  main.zig
bootstrap/src/backend/: LlvmBackend.zig
examples/: cat.bq  checker_board.bq  fizz_buzz.bq  gtk.bq  hello.bq  raylib.bq  tcp.bq  xlib.bq
examples/wasm/: index.bq
lib/: std.bq
lib/std/: c.bq  fs.bq  heap.bq  io.bq  math.bq  mem.bq  os.bq  process.bq  target.bq
lib/std/os/: linux.bq
lib/std/os/linux/: x86.bq  x86_64.bq
lib/std/runner/: exe.bq
rboot/: Cargo.toml  README.md
rboot/src/: ast.rs  bcu.rs  lexer.rs  main.rs  token.rs
src/: bcu.rs  lexer.bq  lowerer.rs  parser.rs  scope.rs
tests/: c_allocator.bq  scoping.bq
zboot/: README.md
zboot/src/: Air.zig  Sema.zig  Sir.zig  main.zig
