[package]
name = "barq"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
incremental = false
codegen-units = 1
